@@ -7,6 +7,8 @@
  * src/gui.c:
    Ignore numbers when updating the editor menu.
    Rename the editor menu item to 'Spelling Suggestions'.
+   When adding words to the dictionary, remove all indicators on
+   these words.
 
 
 2008-10-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
